feat: add esbuild bundling for extension packaging (#20)
- Add esbuild.js build script producing single dist/extension.js
- Update package.json main to dist/extension.js, add esbuild scripts
- Keep compile:tsc for tests (they need out/ directory)
- vscode:prepublish now runs esbuild --production (minified, no sourcemaps)
- Update .vscodeignore to exclude out/, node_modules/, esbuild.js
- Update CI and release workflows to remove redundant compile steps
- VSIX reduced from 1.78 MB / 1007 files to ~908 KB / 19 files

Co-authored-by: Jeromy Statia (from Dev Box) <jstatia@microsoft.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       continue-on-error: true
     
     - name: Compile TypeScript
-      run: npm run compile
+      run: npm run compile:tsc
     
     - name: Run tests (Ubuntu)
       if: runner.os == 'Linux'
@@ -82,9 +82,6 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-    
-    - name: Compile TypeScript
-      run: npm run compile
     
     - name: Package VSIX
       run: npx @vscode/vsce package
